<resources>
    <string name="app_name">Fitnesse</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="signout_btn">Sign Out</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="activities">Activities</string>
    <string name="about">About</string>
    <string name="activities_prompt">Choose an Activity:</string>
    <string name="minutes">Minutes</string>
    <string name="time">Time (Minutes):</string>
    <string name="location">Location:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="add_activity">Add Activity</string>
    <string name="activity">Activity:</string>
    <string name="date">Date:</string>
    <string name="no_activities">You currently have no saved activities. Please press the + icon to get started!</string>
    <string name="add_friends">Add Friends</string>
    <string name="name">Name</string>
    <string name="no_activity">No Activity</string>
    <string name="please_enter_values_in_highlighted_fields">Please Enter Values in Highlighted Fields.</string>
    <string name="effort_level">Effort Level:</string>
    <string name="minimal_effort">Minimal Effort</string>
    <string name="maximum_effort">Maximum Effort</string>
    <string name="welcome">Welcome</string>
    <string name="month">Month</string>
    <string name="all_activities">All Activities</string>
    <string name="average_effort_level">Average Effort Level</string>
    <string name="average_minutes">Average Minutes</string>
    <string name="number">Number</string>
    <string name="each_activity_analysis">Each Activity Analysis</string>
    <string name="activity_analysis">Activity Analysis</string>

    <string-array name="activities_array">
        <item>Select</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bleep Test</item>
        <item>Boxercise</item>
        <item>Cricket</item>
        <item>Crossfit</item>
        <item>Football</item>
        <item>High Intensity Interval Training (HIIT)</item>
        <item>Running</item>
        <item>Skipping</item>
        <item>Strength Training</item>
        <item>Walking</item>
        <item>Weightlifting</item>
        <item>Workout</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_view_maps">Map</string>
    <string name="notifications">Notifications</string>
    <string name="save_changes">Save Changes</string>
    <string name="view_activity">View Activity</string>
    <string name="duration">Duration:</string>
    <string name="mins">mins</string>

    <string name="SPOTIFY_URI">spotify:playlist:37i9dQZF1DWSWA2pLcO5dt</string>

    <string name="SPOTIFY_OPENING_MESSAGE">We recommend listening to music while exercising!</string>
    <string name="SAVED_ACTIVITY_MESSAGE">Saved</string>
    <string name="TURN_ON_LOCATION_MESSAGE">Turn on location</string>
    <string name="ENTER_NUMBER_OF_MINS_MESSAGE">Please Enter the Number of Minutes.</string>
    <string name="ENTER_DESCRIPTION_MESSAGE">Please Enter More Information About Your Activity.</string>
    <string name="LOGIN_SUCCESSFUL_MESSAGE">Logged in Successfully</string>
    <string name="SAVE_SUCCESSFUL_MESSAGE">Saved Successfully</string>
    <string name="SET_NOTIFICATION_TIME_MESSAGE">Please set the time you would like to be reminded to complete your daily activity</string>
    <string name="ACCOUNT_CREATED_SUCCESSFUL_MESSAGE">Account Created Successfully</string>
    <string name="NO_SAVED_ACTIVITIES_MESSAGE">Please click the button above to add an activity</string>
    <string name="MAPVIEW_BUNDLE_KEY">MapViewBundleKey</string>
    <string name="NOTIFICATION_TITLE">Exercise Time!</string>
    <string name="NOTIFICATION_MESSAGE">You haven\'t been active today</string>
    <string name="ACTIVITY_MARKER_NAME">Activity Location</string>
    <string name="SIGN_OUT_DIALOG_TITLE">Confirm Sign Out</string>

    <string name="WEBVIEW_LOAD_URL">file:///android_asset/homepage.html</string>
    <string name="SIGN_OUT_DIALOG_MESSAGE">Are you sure you want to sign out?</string>
    <string name="CURRENT_NOT_AVAILABLE">Current Location Not Available</string>

    <string name="EMAIL_REQUIRED">Email is Required</string>
    <string name="PASSWORD_REQUIRED">Password is Required</string>
    <string name="EXIT_APP_TITLE">Confirm exit</string>
    <string name="EXIT_APP_MESSAGE">Are you sure you want to exit Fitnesse?</string>
    <string name="X_AXIS_LABEL">Day of Month</string>
    <string name="Y_AXIS_LABEL">Activity (mins)</string>
    <string name="NO_ACTIVITY">No Activity This Month</string>

</resources>
