<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="89dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.viewpager.widget.ViewPager
            android:layout_width="14dp"
            android:layout_height="match_parent">

        </androidx.viewpager.widget.ViewPager>

        <LinearLayout
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <TextView
                android:id="@+id/chooseActivitiesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities_prompt" />

            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="11dp">

            </androidx.viewpager.widget.ViewPager>

            <Spinner
                android:id="@+id/activitiesChooser"
                android:layout_width="179dp"
                android:layout_height="45dp"
                android:entries="@array/activities_array"
                android:prompt="@string/activities_prompt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <EditText
                android:id="@+id/minutesEditText"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/minutes"
                android:importantForAutofill="no"
                android:inputType="time" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView"
        tools:text="@string/description" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="381dp"
        android:layout_height="195dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:autofillHints="Describe what you did in your session."
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <ProgressBar
        android:id="@+id/addActivityProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
        app:layout_constraintEnd_toStartOf="@+id/descriptionEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/descriptionEditText"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <TextView
        android:id="@+id/blankFieldsErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="4dp"
        android:text="Please Enter Values in Highlighted Fields."
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>